--- a/styles/style.css
+++ b/styles/style.css
@@ -127,7 +127,7 @@ header .header-bottom .user-menu {
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    
+
     position: fixed;
     top: 60px;
     right: -66px;
@@ -143,25 +143,25 @@ header .header-bottom .user-menu {
 
 /* MAIN */
 main {
-    margin-top: 60px;
+    margin-top: 0;
 }
 
 /* Banner */
 .banner {
     width: 100%;
-    height: 606px;
-    background-image: url(../assets/images/valorant-pergunte-3-scaled\ 1.png);
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: bottom;
+    height: 722px;
+    /* alterar a imagem de fundo */
+    background-image: url(../assets/images/Banner_background_1.png);
+    background-size: cover;
+    background-position: top;
 }
 
 .banner h1 {
-    font-family: "titilliumweb-black";
-    font-size: 40px;
-    display: flex;
+    /* font-family: "titilliumweb-black"; */
+    font-size: 80px;
+    /* display: flex;
     justify-content: center;
-    text-shadow: 0 0 7px #FD4255;
+    text-shadow: 0 0 7px #FD4255; */
 }
 
 .banner .botao-sobre {
@@ -207,7 +207,7 @@ main {
 
 /* Tablets >= 768px */
 @media screen and (min-width: 768px) {
-    
+
 }
 
 /* Desktops >= 1200px */
@@ -215,15 +215,47 @@ main {
     .layout-grid {
         width: 100%;
         max-width: 1200px;
-
         border: 3px dotted yellowgreen;
     }
-}
+
 
 /* HEADER */
 header {
     position: static;
     height: 140px;
+}
+
+header .header-top {
+    /* block é o valor default da maioria dos elementos */
+     display: block;
+}
+
+header .header-top .contatos {
+    width: 415px;
+    display: flex;
+    justify-content: space-between;
+
+    font-family: "inter";
+    font-size: 14px;
+    font-weight: 400;
+
+    border: 2px solid white;
+}
+
+header .header-top .midias-sociais {
+    width: 120px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    /* border:  2px solid white; */
+}
+
+header .header-top .contatos > div {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 10px;
+    /* border: 1px solid yellow; */
 }
 
 header .menu-hamburguer,
@@ -241,8 +273,15 @@ header .header-bottom nav {
     position: static;
     width: 440px;
     height: 50px;
+    padding: 0;
     flex-direction: row;
-    background-color: red;
+    align-items: center;
+    /* background-color: red; */
+}
+
+header .header-bottom nav > a {
+    border: none;
+    font-size: 14px;
 }
 
 header.header-bottom .menu-usuario {
@@ -257,4 +296,23 @@ header.header-bottom .menu-usuario {
 main {
     margin-top: 0;
 }
+}
 
+
+
+
+
+
+
+
+
+
+
+
+
+ /* |     \                  /  __   /\      __    |\      ////    |
+    |____  \                /       /  \           | \    ///  ____|
+    |       \      /\      /       /    \          |  \  //        |
+    |        \    /  \    /       /______\         |   \/          |
+    |         \  /    \  /       /        \        |               |
+    |          \/      \/_______/          \_______|               |     */
