--- a/styles/style.css
+++ b/styles/style.css
@@ -43,6 +43,13 @@ body {
     right: 0 !important;
 }
 
+/* justify content + align itens */
+.between-center-alignment {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 /* Mobile First */
 
 /* HEADER */
@@ -65,13 +72,6 @@ header .header-top {
 
 /* Header Bottom */
 
-/* justify content + align itens */
-.between-center-alignment {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
 header .header-bottom {
     height: 100%;
 }
@@ -91,24 +91,28 @@ header .header-bottom nav {
     flex-direction: column;
     justify-content: space-between;
     padding-bottom: 20px;
-
     background-image: linear-gradient(to bottom right, rgba(27, 20, 38, 0.7), rgba(27, 20, 38, 0.3));
     backdrop-filter: blur(45px);
 
     transition: left 0.4s;
 }
 
+
+
 /* somente links "filhos diretos" */
 header .header-bottom nav > a {
+    padding: 30px 0;   
     color: white;
     font-family: Inter;
     font-weight: 400;
     font-size: 15px;
     text-align: center;
     text-decoration: none;
-
-    padding: 30px 0;
     border-bottom: 2px solid #F9AA01;
+}
+
+header .header-bottom nav > a:hover {
+    color: #F9AA01;
 }
 
 header .header-bottom nav > a:last-of-type {
@@ -121,47 +125,51 @@ header .header-bottom nav .social-media {
     gap: 50px; /* gap é o espaçamento entre os elementos, funciona em linha e também em coluna. */
 }
 
-/* 3 dots menu - right */
+/* menu lateral - right */
 header .header-bottom .user-menu {
+     position: fixed;
+    top: 60px;
+    right: -19vw;
+    width: 19vw;
+    height: 170px;
+    background-image: linear-gradient(to bottom right, rgba(27, 20, 38, 0.7), rgba(27, 20, 38, 0.3));
+    backdrop-filter: blur(45px);
+    
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-
-    position: fixed;
-    top: 60px;
-    right: -66px;
-
-    width: 66px;
-    height: 213px;
-
-    background-image: linear-gradient(to bottom right, rgba(27, 20, 38, 0.7), rgba(27, 20, 38, 0.3));
-    backdrop-filter: blur(45px);
 
     transition: right 0.4s;
 }
 
 /* MAIN */
 main {
-    margin-top: 0;
+    margin-top: 60px;
 }
 
 /* Banner */
 .banner {
     width: 100%;
-    height: 722px;
-    /* alterar a imagem de fundo */
-    background-image: url(../assets/images/Banner_background_1.png);
-    background-size: cover;
+    height: 606px;
+    padding: 40px 0;
+    
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+
+    background-image: url(../assets/images/valorant-pergunte-3-scaled\ 1.png);
+    background-size: contain;
     background-position: top;
 }
 
 .banner h1 {
-    /* font-family: "titilliumweb-black"; */
-    font-size: 80px;
-    /* display: flex;
+    font-family: "titilliumweb-black";
+    font-size: 40px;
+    display: flex;
     justify-content: center;
-    text-shadow: 0 0 7px #FD4255; */
+    text-shadow: 0 0 7px #FD4255; 
 }
 
 .banner .botao-sobre {
@@ -205,6 +213,56 @@ main {
     background-color: #F9AA01;
 }
 
+/* Footer */
+footer {
+    padding-top: 60px;
+    padding-bottom: 30px;
+    box-shadow: inset 0 30px 60px rgba(0, 0, 0, 1);
+    background-image: url(../assets/images/backgroung_footer.png);
+    background-position: top;
+    backcground-size: contain;
+}
+
+footer #sobre {
+    width: 100%;
+    height: 304px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    background-color: rgba(250, 128, 114, .3);
+
+}
+
+footer #sobre p {
+    font-family: "quicksand";
+    font-weight: 400;
+    font-size: 14px;
+}
+
+footer #midias-sociais-footer {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    gap: 25px;
+}
+
+footer #sobre > img { 
+    width: 110px; }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* Tablets >= 768px */
 @media screen and (min-width: 768px) {
 
@@ -217,6 +275,17 @@ main {
         max-width: 1200px;
         border: 3px dotted yellowgreen;
     }
+
+
+    .banner {
+        width: 100%;
+        height: 813px;
+        background-image: url(../assets/images/Banner_background_1.png);
+        background-size: cover;
+        background-position: top;
+    }   
+
+
 
 
 /* HEADER */
@@ -298,6 +367,18 @@ main {
 }
 }
 
+/* sessao de jogos */
+main .jogos {
+    height: 500px;
+}
+
+main .jogos .jogos-flex {
+    flex-direction: row;
+}
+
+main .jogos .jogos-flex img {
+    width: 555px;
+}
 
 
 
